[tool.poetry]
name = "python-btc-08"
version = "0.1.0"
description = ""
authors = ["jeantorre <jean.torre21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
bandit = "^1.7.9"
pandas = "^2.2.2"
pandera = "^0.20.3"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
